Fix logo spacing

--- a/css/templatemo-tiya-golf-club.css
+++ b/css/templatemo-tiya-golf-club.css
@@ -798,6 +798,7 @@ strong {
   border-radius: var(--border-radius-medium);
   position: relative;
   overflow: hidden;
+  margin-bottom: 50%;
 }
 
 .member-block-image-wrap:hover .member-block-image {
